package(default_visibility=["//visibility:public"])
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/karma:index.bzl", "karma_web_test")

ts_library(
    name = "js_lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "@npm//@types/long",
        "@npm//long",
        "@npm//rxjs/ajax",
        "@npm//json2typescript",
    ],
)

karma_web_test(
    name = "js_lib_tests",
    srcs = glob(
        ["**/*.spec.ts"],
    ),
    config_file = "//:karma.conf.js",
    deps = [
        ":js_lib"
    ]
)